day-9/ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas-static
Spec:
    rules:
    - http:
        paths:
        - path: /static
          pathType: Prefix
          backend:
            service:
              name: giropops-senhas
              port:
                number: 5000
