day-9/ingress-6-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "girpops-senhas-users"
    nginx.ingress.kubernetes.io/auth-realm: "Autenticacao Necessaria"
spec:
    ingressClassName: nginx
    rules:
    - host: giropops-containers.expert
      http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: giropops-senhas
              port:
                number: 5000
