day-9/ingress-6.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
    - host: giropops-containers.expert
      http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: giropops-senhas
              port:
                number: 5000
